--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,8 @@ services:
     command: >
       sh -c "python manage.py wait_for_db &&
               python manage.py migrate &&
-              python manage.py runserver 0.0.0.0:8000"
+              python manage.py runserver 0.0.0.0:8000 &&
+              pytest"
     environment:
       - DB_HOST=db
       - DB_NAME=devdb
@@ -22,7 +23,7 @@ services:
       - db
 
   db:
-    image: postgres:13-alpine
+    image: postgres:13
     volumes:
       - dev-db-data:/var/lib/postgresql/data
     environment:
