changing tests to py test 60test done and work

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,4 +1,4 @@
 [pytest]
-DJANGO_SETTINGS_MODULE = app.app.settings
+DJANGO_SETTINGS_MODULE = app.settings
 python_files = test_admin.py
 addopts = -rP
